{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 117,
  "lineage": "daa55921-9b14-80e0-512d-d22b397adb52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678f95338ab3a12b",
            "domain": "vpc",
            "id": "eipalloc-0678f95338ab3a12b",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-20-163.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.20.163",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060a84cbcb5c14844",
            "arn": "arn:aws:ec2:us-east-2:216893445815:instance/i-0a864e8375a4a2652",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a864e8375a4a2652",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dip_terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a244c237aacb5f7a",
            "private_dns": "ip-10-0-0-41.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.41",
            "public_ip": "3.12.197.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c98871f6fdb650f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012c565580787cf43",
            "tags": {
              "Name": "TerraformBastionServerInstance"
            },
            "tags_all": {
              "Name": "TerraformBastionServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07643a7582f7bd63a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.terraform_bastion_sg",
            "aws_subnet.dip_terraform_public_subnet",
            "aws_vpc.dip_terraform",
            "data.http.myip",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060a84cbcb5c14844",
            "arn": "arn:aws:ec2:us-east-2:216893445815:instance/i-08c8ea3147c483b8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c8ea3147c483b8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dip_terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbaea6bab0fb9a30",
            "private_dns": "ip-10-0-0-162.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082b83d26bda8af96",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045bbb0b0ae4ea1e3",
            "tags": {
              "Name": "TerraformPrivateServerInstance"
            },
            "tags_all": {
              "Name": "TerraformPrivateServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c143162172540a0"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.terraform_bastion_sg",
            "aws_security_group.terraform_private_sg",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform",
            "data.http.myip",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060a84cbcb5c14844",
            "arn": "arn:aws:ec2:us-east-2:216893445815:instance/i-0fe004e88ddc92a79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe004e88ddc92a79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dip_terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041dd7f467149faae",
            "private_dns": "ip-10-0-0-87.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.87",
            "public_ip": "3.135.232.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1667626e3f601f1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012c565580787cf43",
            "tags": {
              "Name": "TerraformPublicServerInstance"
            },
            "tags_all": {
              "Name": "TerraformPublicServerInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0635ae1057c568dd5"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.terraform_public_sg",
            "aws_subnet.dip_terraform_public_subnet",
            "aws_vpc.dip_terraform",
            "data.http.myip",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:internet-gateway/igw-06872cd8b72c6d88c",
            "id": "igw-06872cd8b72c6d88c",
            "owner_id": "216893445815",
            "tags": {
              "Name": "terraform_gw"
            },
            "tags_all": {
              "Name": "terraform_gw"
            },
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "dependencies": [
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0678f95338ab3a12b",
            "association_id": "eipassoc-0a42c247259ec65bf",
            "connectivity_type": "public",
            "id": "nat-0773d3211477a832a",
            "network_interface_id": "eni-01a1fbd2e222bf6ac",
            "private_ip": "10.0.0.150",
            "public_ip": "3.22.20.163",
            "subnet_id": "subnet-045bbb0b0ae4ea1e3",
            "tags": {
              "Name": "terraform_NATgw"
            },
            "tags_all": {
              "Name": "terraform_NATgw"
            }
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_private_rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:route-table/rtb-0839ab1fbc0f232b3",
            "id": "rtb-0839ab1fbc0f232b3",
            "owner_id": "216893445815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0773d3211477a832a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_private_rtable"
            },
            "tags_all": {
              "Name": "terraform_private_rtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:route-table/rtb-03910b29d46ece22f",
            "id": "rtb-03910b29d46ece22f",
            "owner_id": "216893445815",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06872cd8b72c6d88c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_rtable"
            },
            "tags_all": {
              "Name": "terraform_public_rtable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0830eaf17ee7b94",
            "route_table_id": "rtb-0839ab1fbc0f232b3",
            "subnet_id": "subnet-045bbb0b0ae4ea1e3"
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_internet_gateway.terraform_gw",
            "aws_nat_gateway.terraform_nat_gw",
            "aws_route_table.terraform_private_rtable",
            "aws_subnet.dip_terraform_private_subnet",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00828b8b428cdb384",
            "route_table_id": "rtb-03910b29d46ece22f",
            "subnet_id": "subnet-012c565580787cf43"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_gw",
            "aws_route_table.terraform_public_rtable",
            "aws_subnet.dip_terraform_public_subnet",
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:security-group/sg-07643a7582f7bd63a",
            "description": "Allow  SSH traffic from myip address and  all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07643a7582f7bd63a",
            "ingress": [
              {
                "cidr_blocks": [
                  "108.207.98.235/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "216893445815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_bastion_sg"
            },
            "tags_all": {
              "Name": "terraform_bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:security-group/sg-07c143162172540a0",
            "description": "Allow TLS of Bastion host and SSH inbound traffic of public subnet and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c143162172540a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/25"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07643a7582f7bd63a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "216893445815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_private_sg"
            },
            "tags_all": {
              "Name": "terraform_private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_bastion_sg",
            "aws_vpc.dip_terraform",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:security-group/sg-0635ae1057c568dd5",
            "description": "Allow TLS and SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0635ae1057c568dd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "108.207.98.235/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "216893445815",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_public_sg"
            },
            "tags_all": {
              "Name": "terraform_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dip_terraform",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dip_terraform_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-045bbb0b0ae4ea1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045bbb0b0ae4ea1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_private_subnet"
            },
            "tags_all": {
              "Name": "dip_terraform_private_subnet"
            },
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "dependencies": [
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dip_terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:subnet/subnet-012c565580787cf43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012c565580787cf43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216893445815",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dip_terraform_public_subnet"
            },
            "tags_all": {
              "Name": "dip_terraform_public_subnet"
            },
            "vpc_id": "vpc-0e8d481555ef1ba83"
          },
          "dependencies": [
            "aws_vpc.dip_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dip_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216893445815:vpc/vpc-0e8d481555ef1ba83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-074347552c593a8c9",
            "default_route_table_id": "rtb-0122c02eed2d1ba97",
            "default_security_group_id": "sg-06b3001adf1bfebf6",
            "dhcp_options_id": "dopt-8097d1eb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8d481555ef1ba83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0122c02eed2d1ba97",
            "owner_id": "216893445815",
            "tags": {
              "Name": "dip_terraform"
            },
            "tags_all": {
              "Name": "dip_terraform"
            }
          }
        }
      ]
    }
  ]
}